Revert "fix image cropper: add cropperjs CSS globally, fix class name conflict"
This reverts commit 4efbcf8ef4341d194f1daf96fa306a6c4f6e5f90.

--- a/src/app/shared/image-cropper/image-cropper.component.scss
+++ b/src/app/shared/image-cropper/image-cropper.component.scss
@@ -1,3 +1,5 @@
+@import 'cropperjs/dist/cropper.css';
+
 .image-cropper-wrapper {
   width: 100%;
 }
@@ -8,7 +10,7 @@
   padding: 2rem;
 }
 
-.cropper-area {
+.cropper-container {
   text-align: center;
 
   img {
